<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">sLOCK</string>
    <string name="set_pin">Set PIN</string>
    <string name="enter_pin">Enter PIN </string>
    <string name="reenter_pin">ReEnter PIN </string>
    <string name="pin_hint">PIN length should be of 4&#8211;6 digits</string>
    <string name="btn_login">Login</string>
    <string name="forgot_pin">Forgot PIN?</string>
    <string name="mobile_nos">Mobile Numbers</string>
    <string name="prim_mobile">Primary Mobile</string>
    <string name="sec_mobile">Secondary Mobile</string>
    <string name="change_sec_pin">Change Security PIN</string>
    <string name="old_pin">Old PIN</string>
    <string name="new_pin">New PIN</string>
    <string name="confirm_pin">Confirm PIN</string>
    <string name="act_deact_app">Activate/Deactivate App</string>
    <string name="act_or_deact">Activate | Deactivate</string>
    <string name="activated">Activated</string>
    <string name="deactivated">Deactivated</string>
    <string name="btn_activate">Activate</string>
    <string name="btn_deactivate">Deactivate</string>
    <string name="choose_sec_opts">Choose Security Options</string>
    <string name="backup">Backup Data (on Cloud)</string>
    <string name="wipe">Wipe Data</string>
    <string name="lock">Lock Device</string>
    <string name="dbx_email">Email</string>
    <string name="dbx_passwd">Password</string>
    <string name="uninstall_prot">Uninstall Protection</string>
    <string name="about">About</string>
    <string name="logoff">Log off</string>
    <string name="btn_save">Save</string>
    <string name="btn_cancel">Cancel</string>
    <string name="action_settings">Settings</string>

</resources>
