<?xml version="1.0" encoding="utf-8"?>
<ScrollView android:gravity="center" android:orientation="vertical" android:layout_width="fill_parent" 
  android:layout_height="fill_parent" android:fillViewport="true"
  xmlns:android="http://schemas.android.com/apk/res/android"
  android:background="#323232" >
    <LinearLayout android:gravity="left" android:layout_gravity="top" android:orientation="vertical"
         android:id="@+id/settings_main_form" android:layout_width="fill_parent" 
         android:layout_height="wrap_content" >
        <TextView
            android:id="@+id/mobile_nos"
            android:layout_width="fill_parent"
            android:layout_height="25.0dip"
            android:layout_marginBottom="10.0dip"
            android:layout_marginTop="10.0dip"
            android:drawableRight="@drawable/arrow_pressed"
            android:gravity="left|center"
            android:paddingLeft="20.0dip"
            android:text="@string/mobile_nos"
            android:textColor="#ffffff"
            android:textSize="16.0sp" />
        <View android:background="#ffe6e6e6" android:layout_width="fill_parent" android:layout_height="1.0dip" />
        <TextView
            android:id="@+id/change_sec_pin"
            android:layout_width="fill_parent"
            android:layout_height="25.0dip"
            android:layout_marginBottom="10.0dip"
            android:layout_marginTop="10.0dip"
            android:drawableRight="@drawable/arrow_pressed"
            android:gravity="left|center"
            android:paddingLeft="20.0dip"
            android:text="@string/change_sec_pin"
            android:textColor="#ffffff"
            android:textSize="16.0sp" />
        <View android:background="#ffe6e6e6" android:layout_width="fill_parent" android:layout_height="1.0dip" />
        <TextView
            android:id="@+id/choose_sec_opts"
            android:layout_width="fill_parent"
            android:layout_height="25.0dip"
            android:layout_marginBottom="10.0dip"
            android:layout_marginTop="10.0dip"
            android:drawableRight="@drawable/arrow_pressed"
            android:gravity="left|center"
            android:paddingLeft="20.0dip"
            android:text="@string/choose_sec_opts"
            android:textColor="#ffffff"
            android:textSize="16.0sp" />
        <View android:background="#ffe6e6e6" android:layout_width="fill_parent" android:layout_height="1.0dip" />
        <TextView
            android:id="@+id/act_deact_app"
            android:layout_width="fill_parent"
            android:layout_height="25.0dip"
            android:layout_marginBottom="10.0dip"
            android:layout_marginTop="10.0dip"
            android:drawableRight="@drawable/arrow_pressed"
            android:gravity="left|center"
            android:paddingLeft="20.0dip"
            android:text="@string/act_deact_app"
            android:textColor="#ffffff"
            android:textSize="16.0sp" />
        <View android:background="#ffe6e6e6" android:layout_width="fill_parent" android:layout_height="1.0dip" />
        <TextView
            android:id="@+id/uninstall_prot"
            android:layout_width="fill_parent"
            android:layout_height="25.0dip"
            android:layout_marginBottom="10.0dip"
            android:layout_marginTop="10.0dip"
            android:drawableRight="@drawable/arrow_pressed"
            android:gravity="left|center"
            android:paddingLeft="20.0dip"
            android:text="@string/uninstall_prot"
            android:textColor="#ffffff"
            android:textSize="16.0sp" />
        <View android:background="#ffe6e6e6" android:layout_width="fill_parent" android:layout_height="1.0dip" />
        <TextView
            android:id="@+id/about"
            android:layout_width="fill_parent"
            android:layout_height="25.0dip"
            android:layout_marginBottom="10.0dip"
            android:layout_marginTop="10.0dip"
            android:drawableRight="@drawable/arrow_pressed"
            android:gravity="left|center"
            android:paddingLeft="20.0dip"
            android:text="@string/about"
            android:textColor="#ffffff"
            android:textSize="16.0sp" />
        <View android:background="#ffe6e6e6" android:layout_width="fill_parent" android:layout_height="1.0dip" />
        <TextView
            android:id="@+id/logoff"
            android:layout_width="fill_parent"
            android:layout_height="25.0dip"
            android:layout_marginBottom="10.0dip"
            android:layout_marginTop="10.0dip"
            android:drawableRight="@drawable/arrow_pressed"
            android:gravity="left|center"
            android:paddingLeft="20.0dip"
            android:text="@string/logoff"
            android:textColor="#ffffff"
            android:textSize="16.0sp" />
        <View android:background="#ffe6e6e6" android:layout_width="fill_parent" android:layout_height="1.0dip" />
    </LinearLayout>
</ScrollView>