<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android"
  android:background="#323232" >
    <ScrollView android:padding="24.0dip"
         android:layout_width="fill_parent"
         android:layout_height="0.0dip"
         android:layout_weight="1.0">

        <LinearLayout
            android:id="@+id/choose_sec_opts_form"
            style="@+style/RoundedWhiteRect_3"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="24.0dip"
            android:layout_marginRight="24.0dip"
            android:background="@drawable/rounded_white_rectangle_3"
            android:orientation="vertical"
            android:paddingBottom="45.0dip"
            android:paddingLeft="15.0dip"
            android:paddingRight="15.0dip"
            android:paddingTop="45.0dip" >
             
            <TextView
                style="@+style/form_header"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:gravity="left|center"
                android:text="@string/choose_sec_opts"
                android:textSize="15.0sp" />
            <View android:background="#ff777777"
                 android:layout_width="fill_parent" 
                 android:layout_height="1.0dip" 
                 android:layout_marginBottom="10.0sp" />
            
            <TextView android:textColor="#0ce822"
                 android:gravity="left | center"
                 android:id="@+id/lblBackup" 
                 android:layout_width="fill_parent" 
                 android:layout_height="wrap_content" 
                 android:layout_marginTop="16.0dip" 
                 android:text="@string/backup"
                 android:drawableRight="@drawable/go_arrow" 
                 style="@+style/MenuItemSettingsText" />
            <View android:id="@+id/separator1"
                 android:background="#ff777777" 
                 android:layout_width="fill_parent" 
                 android:layout_height="0.5dip" />
            
            <TextView android:textColor="#0ce822"
                 android:gravity="left|center" 
                 android:id="@+id/lblWipe" 
                 android:layout_width="fill_parent" 
                 android:layout_height="wrap_content" 
                 android:layout_marginTop="16.0dip" 
                 android:text="@string/wipe"
                 android:drawableRight="@drawable/go_arrow" 
                 style="@+style/MenuItemSettingsText" />
            <View android:id="@+id/separator2"
                 android:background="#ff777777" 
                 android:layout_width="fill_parent" 
                 android:layout_height="0.5dip" />
            
            <TextView android:textColor="#0ce822"
                 android:gravity="left|center" 
                 android:id="@+id/lblLock" 
                 android:layout_width="fill_parent" 
                 android:layout_height="wrap_content" 
                 android:layout_marginTop="16.0dip" 
                 android:text="@string/lock" 
                 android:drawableRight="@drawable/go_arrow"
                 style="@+style/MenuItemSettingsText" />
            <View android:id="@+id/separator3"
                 android:background="#ff777777" 
                 android:layout_width="fill_parent" 
                 android:layout_height="0.5dip" />
        </LinearLayout>
    </ScrollView>
    <LinearLayout android:gravity="center"
         android:id="@+id/taskbar" 
         android:padding="6.0dip" 
         android:layout_width="fill_parent" 
         android:layout_height="wrap_content">

        <Button
            android:id="@+id/btnCancelOpts"
            style="@+style/cancel_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/rounded_white_rectangle"
            android:text="@string/btn_cancel" />
        
        <Button
            android:id="@+id/btnSaveOpts"
            style="@+style/save_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10.0dip"
            android:background="@drawable/round_rect_blue"
            android:text="@string/btn_save" />

    </LinearLayout>
</LinearLayout>