<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android"
  android:background="#323232" >
    <ScrollView android:padding="24.0dip"
         android:layout_width="fill_parent"
         android:layout_height="0.0dip"
         android:layout_weight="1.0">
        <LinearLayout
            android:id="@+id/activate_de_form"
            style="@+style/RoundedWhiteRect"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="24.0dip"
            android:layout_marginRight="24.0dip"
            android:background="@drawable/rounded_white_rectangle_3"
            android:orientation="vertical"
            android:paddingBottom="45.0dip"
            android:paddingLeft="15.0dip"
            android:paddingRight="15.0dip"
            android:paddingTop="45.0dip" >
            <TextView
                style="@+style/form_header"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:gravity="left|center"
                android:text="@string/act_or_deact" />
            <View android:background="#ff777777"
                 android:layout_width="fill_parent" 
                 android:layout_height="2.0dip" 
                 android:layout_marginBottom="10.0sp" />
            <TextView android:textColor="#ff0000ff"
                 android:layout_gravity="center_horizontal" 
                 android:id="@+id/lblActivate" 
                 android:layout_width="wrap_content" 
                 android:layout_height="wrap_content" 
                 android:layout_marginTop="16.0dip" 
                 android:text="@string/activated"
                 style="@+style/MenuItemSettingsText" />
            <View android:background="#ff777777" 
                 android:layout_width="fill_parent" 
                 android:layout_height="1.0dip" />
        </LinearLayout>
    </ScrollView>
    <LinearLayout android:gravity="center"
         android:id="@+id/taskbar" 
         android:padding="6.0dip" 
         android:layout_width="fill_parent" 
         android:layout_height="wrap_content">
        <Button
            android:id="@+id/btnCancelActivate"
            style="@+style/cancel_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/rounded_white_rectangle"
            android:text="@string/btn_cancel" />
        <Button
            android:id="@+id/btnActivate"
            style="@+style/save_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10.0dip"
            android:background="@drawable/round_rect_blue"
            android:text="@string/btn_deactivate" />
    </LinearLayout>
</LinearLayout>