<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    android:background="#3E80B4"
    tools:context=".SLOCK_MainActivity" >
	<TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        style="@android:style/TextAppearance.Large"
        android:textStyle="bold"
        android:textColor="#FFFAFA"
        android:text="@string/set_pin" />
    <LinearLayout
    	android:layout_width="match_parent"
    	android:layout_height="wrap_content"
    	android:layout_marginTop="40dip"
    	android:gravity="left"
    	android:layout_gravity="center_horizontal"
    	android:orientation="horizontal">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@android:style/TextAppearance.Medium"
            android:textColor="#FFFAFA"
            android:textStyle="italic"
            android:text="@string/enter_pin" />
		<EditText 
        	android:id="@+id/pin"    
        	android:layout_width="0dip"
        	android:layout_height="wrap_content"
        	android:layout_marginLeft="5dip"
        	android:layout_weight="1"
        	android:maxLength="6"
        	android:hint="@string/pin_hint"
        	android:inputType="numberPassword" />
	</LinearLayout>
	<LinearLayout
    	android:layout_width="match_parent"
    	android:layout_height="wrap_content"
    	android:layout_marginTop="20dip"
    	android:gravity="left"
    	android:layout_gravity="center_horizontal"
    	android:orientation="horizontal">
    	<TextView
        	android:layout_width="wrap_content"
        	android:layout_height="wrap_content"
        	style="@android:style/TextAppearance.Medium"
        	android:textStyle="italic"
        	android:textColor="#FFFAFA"
        	android:text="@string/reenter_pin" />
    	<EditText 
        	android:id="@+id/rePin"    
        	android:layout_width="0dip"
        	android:layout_height="wrap_content"
        	android:layout_marginLeft="5dip"
        	android:layout_weight="1"
        	android:maxLength="6"
        	android:hint="@string/pin_hint"
        	android:inputType="numberPassword" />
   	</LinearLayout>
	<LinearLayout
    	android:layout_width="match_parent"
    	android:layout_height="wrap_content"
    	android:layout_marginTop="30dip"
    	android:gravity="left"
    	android:layout_gravity="center_horizontal"
    	android:orientation="horizontal">
	<Button
	    android:id="@+id/btnSetPin"
	    style="@android:style/TextAppearance.Medium"
	    android:layout_width="wrap_content"
	    android:layout_height="35dp"
	    android:layout_marginLeft="200dip"
	    android:background="@drawable/buttonback"
	    android:gravity="left"
	    android:text="@string/set_pin"
	    android:textColor="#FFFAFA"
	    android:textStyle="italic" />
	</LinearLayout>
</LinearLayout>