<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout android:orientation="vertical" android:layout_width="fill_parent" 
    android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android"
  android:background="#323232" >
    <ScrollView android:layout_width="fill_parent" android:layout_height="wrap_content" 
        android:layout_alignParentLeft="true" android:layout_centerVertical="true">

        <LinearLayout
            android:id="@+id/setpin_main"
            style="@+style/RoundedWhiteRect_2"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_margin="30.0dip"
            android:background="@drawable/rounded_white_rectangle_2"
            android:gravity="center_vertical"
            android:orientation="vertical"
            android:padding="12.0dip" >
            <LinearLayout android:orientation="horizontal" android:layout_width="fill_parent" 
                android:layout_height="wrap_content" android:layout_marginTop="20.0dip">
                <EditText android:textColor="#ff000000" android:gravity="center" 
                    android:id="@+id/pin" android:layout_width="0.0dip" 
                    android:layout_height="40.0dip" android:hint="@string/enter_pin" 
                    android:layout_weight="1" android:maxLength="6" android:inputType="numberPassword" />
            </LinearLayout>

            <View android:layout_width="fill_parent"
                android:layout_height="1.0dip"
                android:layout_marginTop="-5.0dip"
                android:background="#ffe6e6e6" />

            <LinearLayout android:orientation="horizontal" android:layout_width="fill_parent" 
                android:layout_height="wrap_content" android:layout_marginTop="20.0dip">
                <EditText android:textColor="#ff000000" android:gravity="center" 
                    android:id="@+id/rePin" android:layout_width="0.0dip" 
                    android:layout_height="40.0dip" android:hint="@string/reenter_pin" 
                    android:layout_weight="1" android:maxLength="6" android:inputType="numberPassword" />
            </LinearLayout>

            <View android:layout_width="fill_parent"
                android:layout_height="1.0dip"
                android:layout_marginTop="-5.0dip"
                android:background="#ffe6e6e6" />
            
            <RelativeLayout android:layout_width="fill_parent" android:layout_height="wrap_content" 
                android:layout_margin="15.0dip">
                <Button
                    android:id="@+id/btnSetPin"
                    style="@+style/save_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:layout_alignParentTop="true"
                    android:background="@drawable/round_rect_blue"
                    android:layout_gravity="center_horizontal"
                    android:text="@string/set_pin" />

            </RelativeLayout>
            <TextView android:textSize="13.0sp" android:textColor="#ff464646" android:gravity="center" 
                android:id="@+id/pin_hint" android:layout_width="fill_parent" 
                android:layout_height="wrap_content" android:text="@string/pin_hint" />
        </LinearLayout>
    </ScrollView>
 </RelativeLayout>