<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout android:orientation="vertical" android:layout_width="fill_parent" 
    android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android"
  android:background="#323232" >
    <ScrollView android:layout_width="fill_parent" android:layout_height="wrap_content" 
        android:layout_alignParentLeft="true" android:layout_centerVertical="true">

        <LinearLayout
            android:id="@+id/login_main"
            style="@+style/RoundedWhiteRect_2"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_margin="30.0dip"
            android:background="@drawable/rounded_white_rectangle_2"
            android:gravity="center_vertical"
            android:orientation="vertical"
            android:padding="12.0dip" >
            <LinearLayout android:orientation="horizontal" android:layout_width="fill_parent" 
                android:layout_height="wrap_content" android:layout_marginTop="20.0dip">
                <EditText android:textColor="#ff000000" android:gravity="center" 
                    android:id="@+id/loginPin" android:layout_width="0.0dip" 
                    android:layout_height="40.0dip" android:hint="@string/enter_pin" 
                    android:layout_weight="1" android:maxLength="6" android:inputType="numberPassword" />
            </LinearLayout>

            <View android:layout_width="fill_parent"
                android:layout_height="1.0dip"
                android:layout_marginTop="-5.0dip"
                android:background="#ffe6e6e6" />

            <RelativeLayout android:layout_width="fill_parent" android:layout_height="wrap_content" 
                android:layout_margin="15.0dip">
                <TextView android:textColor="#ff085990" android:gravity="left" android:id="@+id/forgotPin" 
                    android:layout_width="wrap_content" android:layout_height="wrap_content" 
                    android:text="@string/forgot_pin" android:layout_alignBaseline="@+id/btnLogin" 
                    android:layout_alignBottom="@+id/btnLogin" android:layout_alignParentLeft="true" />

                <Button
                    android:id="@+id/btnLogin"
                    style="@+style/save_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:layout_alignParentTop="true"
                    android:background="@drawable/round_rect_blue"
					android:layout_gravity="center_horizontal"
                    android:text="@string/btn_login" />

            </RelativeLayout>
        </LinearLayout>
    </ScrollView>
 </RelativeLayout>