<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout android:orientation="vertical" android:layout_width="fill_parent" 
    android:layout_height="fill_parent" android:fillViewport="true"
  xmlns:android="http://schemas.android.com/apk/res/android" 
  xmlns:app="http://schemas.android.com/apk/res-auto"
  android:background="#323232" >
    <ScrollView android:orientation="vertical" android:id="@+id/main_section" 
        android:layout_width="fill_parent" android:layout_height="fill_parent" 
        android:fillViewport="true">
        <LinearLayout android:gravity="top" android:layout_gravity="center" android:orientation="vertical" 
            android:id="@+id/input_section" android:layout_width="wrap_content" 
            android:layout_height="wrap_content">
            <LinearLayout android:gravity="center" android:orientation="vertical" android:id="@+id/main_form" 
                android:layout_width="fill_parent" android:layout_height="wrap_content">
                <TextView android:textSize="13.0sp" android:textColor="#ffffff" 
                    android:layout_gravity="center" android:id="@+id/mobile_inst" 
                    android:layout_width="fill_parent" android:layout_height="80.0dip" 
                    android:layout_marginLeft="20.0dip" android:layout_marginTop="10.0dip" 
                    android:layout_marginRight="20.0dip" android:text="Dropbox instruction message" />
                <RelativeLayout android:layout_gravity="center" android:orientation="horizontal" 
                    android:layout_width="fill_parent" android:layout_height="wrap_content" 
                    android:layout_marginLeft="20.0dip" android:layout_marginRight="20.0dip">
                    <EditText android:textSize="18.0sp" android:gravity="center" 
                        android:id="@+id/dbxEmail" android:layout_width="fill_parent" 
                        android:layout_height="40.0dip" android:hint="@string/dbx_email" 
                        android:singleLine="true" android:inputType="textEmailAddress"
                        style="@style/form_edit_text" />
                </RelativeLayout>
                <RelativeLayout android:layout_gravity="center" android:orientation="horizontal" 
                    android:layout_width="fill_parent" android:layout_height="wrap_content" 
                    android:layout_marginLeft="20.0dip" android:layout_marginTop="16.0dip" 
                    android:layout_marginRight="20.0dip">
                    <EditText android:textSize="18.0sp" android:gravity="center" 
                        android:id="@+id/dbxPassword" android:layout_width="fill_parent" 
                        android:layout_height="40.0dip" android:hint="@string/dbx_passwd" 
                        android:singleLine="true" android:inputType="textPassword"
                        android:imeOptions="actionDone" style="@style/form_edit_text" />
                </RelativeLayout>
            </LinearLayout>
        </LinearLayout>
    </ScrollView>
    <LinearLayout android:gravity="center" android:id="@+id/taskbar" android:padding="6.0dip" 
        android:layout_width="fill_parent" android:layout_height="wrap_content" 
        android:layout_alignParentBottom="true">
        
        <Button
            android:id="@+id/btnCancelDbx"
            style="@+style/cancel_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10.0dip"
            android:layout_gravity="center_horizontal"
            android:background="@drawable/rounded_white_rectangle"
            android:text="@string/btn_cancel"
            android:textSize="18.0sp" />
        
        <Button
            android:id="@+id/btnSaveDbx"
            style="@style/save_button"
            android:layout_marginLeft="10.0dip"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:background="@drawable/round_rect_blue"
            android:text="@string/btn_save"
            android:textColor="#ffffff"
            android:textSize="18.0sp" />
        
    </LinearLayout>
</RelativeLayout>